--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Main Article Section with Additional Content -->
         <div class="main-article">
           <h2 class="center-header">Kush jemi ne?</h2>
-          <img src="../GazetaFoto/Fotogz.JPG" alt="Pamja përball gjimnazit" />
+          <img src="../GazetaFoto/Fotogz.JPG" loading="lazy" alt="Pamja përball gjimnazit" />
 
           <!-- Moved articles from the sidebar into the main content -->
           <div class="sidebar-article">
@@ -367,7 +367,7 @@
               personal e mësimor.
             </p>
           </div>
-          <img src="../GazetaFoto/Fotogz2.jpg" alt="Pamja përball gjimnazit" />
+          <img src="../GazetaFoto/Fotogz2.jpg" loading="lazy" alt="Pamja përball gjimnazit" />
         </div>
       </div>
     </main>
