--- a/intervista.html
+++ b/intervista.html
@@ -58,6 +58,7 @@
           <img
             src="../GazetaFoto/Intervista.jpg"
             alt="Foto e Padre Domenicos"
+            loading="lazy"
           />
           <div class="sidebar-article">
             <h4 style="text-indent: 30px">
