--- a/intervista2.html
+++ b/intervista2.html
@@ -59,7 +59,8 @@
           </h2>
           <img
             src="../GazetaFoto/Intervista2.jpg"
-            alt="Foto e Padre Domenicos"
+            alt="Foto e Klea Ndreca"
+            loading="lazy"
           />
           <div class="sidebar-article">
             <h4 style="text-indent: 30px">
